# code-splitter

./: Cargo.toml
bindings/python/: Cargo.toml
bindings/python/src/: language.rs
tests/: golang.rs  python.rs  rust.rs
