[workspace]
members = ["bindings/*"]

[workspace.package]
version = "0.1.5"
authors = ["Xiaojing Wang <wangxj03@gmail.com>"]
edition = "2021"
description = "Split code into semantic chunks using tree-sitter"
repository = "https://github.com/wangxj03/code-splitter"
license = "MIT"
keywords = ["code", "split", "tokenizer", "ai", "nlp"]
categories = ["text-processing"]

[package]
name = "code-splitter"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["/.github", "/.vscode", "/bindings/**"]

[dependencies]
tiktoken-rs = { version = "0.5.9", optional = true }
tokenizers = { version = "0.19.1", features = ["http"], optional = true }
tree-sitter = "0.25"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tree-sitter-go = "0.23"
tree-sitter-md = "0.2"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin = "0.3"

[features]
tiktoken-rs = ["dep:tiktoken-rs"]
tokenizers = ["dep:tokenizers"]
